# aed3-tp01

./: .gitignore  TODO.md
ej-1/: CMakeLists.txt  README.md  ej-1.cpp  expected.txt  main.cpp
ej-1/src/: ej1.cpp  ej1.h  res.txt
ej-2/: CMakeLists.txt  main.cpp  test.txt  tests.cpp
ej-2/src/: ej2.cpp  ej2.h
ej-3/: CMakeLists.txt  README.md  ej-3.cpp  main.cpp
ej-3/experimentacion/: CMakeLists.txt  graficos.py  instancias_aleatorias.py  instancias_separadas.py  seleccion_test.cpp
ej-3/implementacion/: CMakeLists.txt
ej-3/informe/: main.tex
ej-3/informe/files/src/: actividades.tex  caratula.tex  experimentacion.tex  resumen.tex
ej-3/informe/files/src/.code/: act.pseudo
ej-3/informe/files/src/.media/: README.md
ej-3/informe_código_runtime/: CMakeLists.txt  graficos.py  instancias_comprimidas.py  runtime_aleatorio.csv  seleccion_test.cpp
